BE - LogFormatUtils - add some tests